changed hero section .title line height properties to prevent problems with font on mobile devices

--- a/assets/style.css
+++ b/assets/style.css
@@ -75,11 +75,11 @@ a:hover {
     font-size: 1.7rem;
 }
 
+/*hero section */
 .hero {
     display: grid;
     grid-template-columns: 3fr 2fr;
     grid-template-rows: 1fr;
-    align-items: center;
     max-width: 50rem;
     margin: 5rem auto;
 }
@@ -89,12 +89,16 @@ a:hover {
     grid-row: 1/2;
     font-family: 'Bungee', cursive;
     color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .main-title {
-    margin: 0 0 -4.1rem 0;
+    margin: 0;
     padding: 0;
     font-size: 4.5rem;
+    line-height: 85%;
 }
 
 .sub-title {
